--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 }
 
 body {
-    color: aliceblue;
+    color: rgb(255, 255, 255);
+    /*COLOR DE LA LETRA*/
+    background: rgb(105, 105, 105);
+    /*color del fondo equipos*/
 }
 
 .header {
@@ -23,6 +26,7 @@ body {
 }
 
 .logo {
+    /*COLOR DEL TITULO PRINCIPAL*/
     position: relative;
     font-size: 25px;
     color: rgb(255, 255, 255);
@@ -30,7 +34,7 @@ body {
     font-weight: 600;
     cursor: default;
     opacity: 0;
-    animation: slideRight is ease forwards;
+    animation: slideRight 1s ease forwards;
 }
 
 .navbar a {
@@ -43,13 +47,15 @@ body {
     transition: .3s;
     opacity: 0;
     animation: slideTop .5s ease forwards;
+    animation-delay: calc(.2s *var(--i));
 }
 
 .navbar a:hover {
     color: aqua;
 }
 
-.home {     /*ESTILO AL FONDO*/
+.home {
+    /*ESTILO AL FONDO*/
     position: relative;
     width: 100%;
     justify-content: space-between;
@@ -74,12 +80,15 @@ body {
     animation-delay: .7s;
 }
 
-.home-content h3:nth-of-type(2){
-    margin-bottom:30px;
+.home-content h3:nth-of-type(2) {
+    margin-bottom: 30px;
+    animation: slideTop 1s ease forwards;
+    animation-delay: .7s;
 }
 
 
-.home-content h3 span{       /*color de las letras en mocimiento de nombres de todos*/
+.home-content h3 span {
+    /*color de las letras en mocimiento de nombres de todos*/
     color: #0ef;
 }
 
@@ -92,14 +101,16 @@ body {
     animation-delay: 1s;
 }
 
-.home-content p {        /*TIPO DE LETRA EN EL SLOGAN*/
+.home-content p {
+    /*TIPO DE LETRA EN EL SLOGAN*/
     font-size: 20px;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
 }
 
-.home-sci a{ /*ESTILO CIRCULAR A LOS ICONOS DE REDES*/
+.home-sci a {
+    /*ESTILO CIRCULAR A LOS ICONOS DE REDES*/
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -110,57 +121,173 @@ body {
     border-radius: 50%;
     font-size: 20px;
     color: #0ef;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: calc(.2s * var(--i));
+    transition: .5s ease;
+
     text-decoration: none;
     margin: 30px 15px 30px 0;
 }
 
 
-.home-sci a:hover{      /*EFECTO DE COLOR EN LOS ICIONOS*/
+.home-sci a:hover {
+    /*EFECTO DE COLOR EN LOS ICIONOS*/
     background: #0ef;
-    color:black;
+    color: black;
     box-shadow: 0 0 20px #0ef;
 
 }
 
-@keyframes slideRight{      /*EFECTO DE REBOTE AL INICIO*/
-    0%{
+#services {
+    color: aliceblue;
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 4rem;
+}
+
+.sub-title {
+    text-align: center;
+    font-size: 60px;
+    padding-bottom: 70px;
+}
+
+.sub-title-span {
+    color: rgb(250, 250, 250);
+}
+
+
+
+
+
+
+
+.container {
+    padding: 90px;
+}
+
+.services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.services-list div {
+    background-color: transparent;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 13px;
+    border-right: 10px;
+    border-radius: 20px;
+    transition: background 0.5s, trasform 0.5s;
+    box-shadow: 1px 1px 20px cyan, 1px 1px 40px cyan;
+}
+
+.services-list div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+
+.services-list div h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.services-list div a {
+    text-decoration: none;
+    color: black;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.read {
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color: black;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;
+}
+
+.read:hover {
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px,
+        0 0 100px cyan, 0 0200px cyan;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes slideRight {
+
+    /*EFECTO DE REBOTE AL INICIO*/
+    0% {
         transform: translateX(-100%);
         opacity: 0;
     }
-    100%{
+
+    100% {
         transform: translateX(0px);
         opacity: 1;
     }
 }
 
-@keyframes slideLeft{      /*EFECTO DE REBOTE AL INICIO*/
-    0%{
+@keyframes slideLeft {
+
+    /*EFECTO DE REBOTE AL INICIO*/
+    0% {
         transform: translateX(100%);
         opacity: 0;
     }
-    100%{
+
+    100% {
         transform: translateX(0px);
         opacity: 1;
     }
 }
 
-@keyframes slideTop{        /*EFECTO DE REBOTE AL INICIO*/
-    0%{
+@keyframes slideTop {
+
+    /*EFECTO DE REBOTE AL INICIO*/
+    0% {
         transform: translateY(100%);
         opacity: 0;
     }
-    100%{
+
+    100% {
         transform: translateY(0px);
         opacity: 1;
     }
 }
 
-@keyframes slideBottom{        /*EFECTO DE REBOTE AL INICIO*/
-    0%{
+@keyframes slideBottom {
+
+    /*EFECTO DE REBOTE AL INICIO*/
+    0% {
         transform: translateY(-100%);
         opacity: 0;
     }
-    100%{
+
+    100% {
         transform: translateY(0px);
         opacity: 1;
     }
